modules/http/http_protocol.c
@@ -1331,7 +1331,7 @@ AP_DECLARE(void) ap_send_error_response(request_rec *r, int recursive_error)
          */
 
         ap_rvputs_proto_in_ascii(r,
-                  DOCTYPE_HTML_2_0
+                  DOCTYPE_HTML_4_01
                   "<html><head>\n<title>", title,
                   "</title>\n</head><body>\n<h1>", h1, "</h1>\n",
                   NULL);
